--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+
+
 <div class="post-header mb2">
   <h1 class="py2">{{ page.title }}</h1>
   <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}</span>
